# poc-flask-alembic

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/sql/: create_comments_table.sql
alembic/versions/: 3a3ecd6b4d29_create_posts_table.py  43816134b9e8_create_users_table.py  cfd7bd28a200_create_comments_table.py
src/: app.py
src/models/: post.py  user.py
src/routes/: posts.py  users.py
src/routes/dto/: create_post_response.py  create_user_response.py  get_post_response.py  get_user_response.py  list_posts_response.py  list_users_response.py  update_post_response.py  user_response.py
tests/: conftest.py
tests/routes/: test_users.py
