[tool.poetry]
name = "poc-flask-alembic"
version = "0.1.0"
description = "POC that runs Alembic migrations at startup and validates API initialization with Flask."
authors = ["Pedro Dalvy <pedrodalvy@outlook.com>"]
readme = "README.md"

packages = [{ include = "src" }]

[tool.poetry.scripts]
start = "src.app:main"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
flask-sqlalchemy = "^3.1.1"
marshmallow = "^3.23.2"
cryptography = "^44.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
